# ChangeLog for dev-libs/pth
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/pth/ChangeLog,v 1.74 2012/09/18 04:50:29 radhermit Exp $

  18 Sep 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove redundant maintainer from metadata.

  08 Aug 2012; Raúl Porcel <armin76@gentoo.org>
  files/pth-2.0.7-kernel-3.patch:
  Update patch replacing it with the line from fedora

  08 Aug 2012; Raúl Porcel <armin76@gentoo.org> pth-2.0.7-r3.ebuild,
  +files/pth-2.0.7-kernel-3.patch:
  Add patch to fix building in some arches with kernel-3

  09 May 2012; Alexis Ballier <aballier@gentoo.org> pth-2.0.7-r3.ebuild:
  keyword ~amd64-fbsd

  11 Jan 2012; Tomáš Chvátal <scarabeus@gentoo.org> pth-2.0.7-r3.ebuild:
  Bump to eapi4 and make static libs optional.

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org> -pth-2.0.7-r2.ebuild:
  Remove old ebuilds. Requested by Arfrever

  21 May 2011; Kacper Kowalik <xarthisius@gentoo.org> pth-2.0.7-r3.ebuild:
  ppc/ppc64 stable wrt #366665

  21 May 2011; Raúl Porcel <armin76@gentoo.org> pth-2.0.7-r3.ebuild:
  alpha/m68k/s390/sh/sparc/x86 stable wrt #366665

  13 May 2011; Jeroen Roovers <jer@gentoo.org> pth-2.0.7-r3.ebuild:
  Stable for HPPA (bug #366665).

  11 May 2011; Markos Chandras <hwoarang@gentoo.org> pth-2.0.7-r3.ebuild:
  Stable on amd64 wrt bug #366665

*pth-2.0.7-r3 (09 Apr 2011)

  09 Apr 2011; Raúl Porcel <armin76@gentoo.org> +pth-2.0.7-r3.ebuild,
  +files/pth-2.0.7-ia64.patch:
  Add a new revision that provides a workaround for bug #350815, and a patch
  for ia64. Straight to stable for arm/ia64/sh

  25 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -pth-2.0.7.ebuild, -pth-2.0.7-r1.ebuild:
  Delete.

  12 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pth-2.0.7-r2.ebuild:
  Copy stable keywords from 2.0.7-r1. Changes introduced in 2.0.7-r2 don't