@@ -4,9 +4,9 @@ DESCRIPTION=GNU Portable Threads
 EAPI=4
 HOMEPAGE=http://www.gnu.org/software/pth/
 IUSE=debug static-libs
-KEYWORDS=alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~x86-fbsd
+KEYWORDS=alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~x86-fbsd ~arm-linux
 LICENSE=LGPL-2.1
 SLOT=0
 SRC_URI=mirror://gnu/pth/pth-2.0.7.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fixheadtails	c6fd1fc49c9dc11924f28a1406f251a0	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=f8bf99bcd100300eda0b7195ec60775f
+_md5_=d5e71fec02be2503ba1d6ff50e422813
